# delivery-app-challenge

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: settings.py  urls.py
orders/: forms.py  models.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: delivery_distance.html  distance_query_history.html
templates/: base.html
