[project]
name = "delivery-app"
version = "0.1.0"
description = "A simple delivery application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.3",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
